Fix unwanted linebreak in filter select-group in chrome

--- a/app/assets/stylesheets/partials/_media.css.sass
+++ b/app/assets/stylesheets/partials/_media.css.sass
@@ -608,7 +608,6 @@
 
     .select-group
       float: none
-      @extend .clearfix
       display: block
 
     input[type='submit']
